# mauna-about

./: .gitignore  README.md  mauna-about  mauna-about.py  meson.build  setup.py  top.mauna.about-hardware.desktop  top.mauna.about.desktop  top.mauna.pkexec.mauna-about.policy  update-translations.sh
css/: about.css
data/: servers.txt
debian/: changelog  control  copyright  meson.build  rules
po/: LINGUAS  af.po  ar.po  bg.po  ca.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  he.po  hi.po  id.po  it.po  ja.po  ja_JP.po  kea.po  ko.po  ko_KR.po  mauna-about.pot  ms.po  nl.po  no.po  pl.po  pl_PL.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  sw.po  th.po  tr.po  uk.po  vi.po  (+3 more)
polkit/: meson.build  top.mauna.about.rules  top.mauna.pkexec.mauna-about.policy
src/: Actions.py  GPU.py  Main.py  MainWindow.py  cli.py  copy_to_desktop.sh  dump_logs.sh  dump_system_info.sh  get_system_info.sh  main.py  utils.py
src/util/: ACPIManager.py  ComputerManager.py  DBusManager.py  DiskManager.py  DualBootManager.py  HardwareDetector.py  HostnameManager.py  MaunaInfoManager.py  MonitorManager.py  OSManager.py  PCIManager.py  PrinterManager.py  SerioManager.py  SystemReportManager.py  USBManager.py  USBManager.py.py  desktop.py  edid.py  network.py
src/util/tmp/: ComputerManager.py  PciDevices.py  UsbDevices.py
src/widget/: HardwareDetailRow.py  HardwareGridCell.py
ui/: MainWindow.glade
